--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PersonalActivity"
-            android:label="个人资料">
-
-        </activity>
+        <activity android:name=".ChangePasswordActivity"></activity>
+        <activity
+            android:name=".PersonalActivity"
+            android:label="个人资料"></activity>
         <activity
             android:name=".HomeActivity"
             android:label="研途" />
