--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
             ></activity>
         <activity android:name=".ChangePasswordActivity"
             android:label="修改密码"/>
+        <activity android:name=".PlanAddActivity"
+            android:label="添加计划"/>
         <activity
             android:name=".PersonalActivity"
             android:label="个人资料" />
