--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.tencent.tbs.tbssdk:sdk:43697'
 }
