--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,24 +2,39 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lin9080.yantu_lin">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
-        <activity android:name=".SettingActivity"
-            android:label="设置"
+        <activity android:name=".WebViewActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             ></activity>
-        <activity android:name=".ChangePasswordActivity"
-            android:label="修改密码"/>
-        <activity android:name=".MyCollectActivity"
-            android:label="我的收藏"/>
-        <activity android:name=".MyTieziActivity"
-            android:label="我的帖子"/>
-        <activity android:name=".PlanAddActivity"
-            android:label="添加计划"/>
+        <activity
+            android:name=".SettingActivity"
+            android:label="设置" />
+        <activity
+            android:name=".ChangePasswordActivity"
+            android:label="修改密码" />
+        <activity
+            android:name=".MyCollectActivity"
+            android:label="我的收藏" />
+        <activity
+            android:name=".MyTieziActivity"
+            android:label="我的帖子" />
+        <activity
+            android:name=".PlanAddActivity"
+            android:label="添加计划" />
         <activity
             android:name=".PersonalActivity"
             android:label="个人资料" />
