--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,8 @@ android {
     }
 }
 
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -32,5 +34,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
-    implementation 'com.tencent.tbs.tbssdk:sdk:43697'
+    api 'com.just.agentweb:agentweb:4.1.2'
 }
