--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ReplyActivity"
-            android:label="帖子"/>
+        <activity android:name=".PublishActivity"></activity>
+        <activity
+            android:name=".ReplyActivity"
+            android:label="帖子" />
         <activity android:name=".WebViewActivity" />
         <activity
             android:name=".SettingActivity"
